# cz2

./: .cz2  .env.compose.example  .env.development  .env.example  .env.production  .gitignore  CLAUDE.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  code-cleanup.md  code-review.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  perplexity_research.md  potential_python_rewrite.md  pyproject.toml  ruff.toml  test.pl  update_versions.md  vite.config.js
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  hvac_protocol_details.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
backend/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml  pyserial_asyncio.py
backend/docs/: API_COMMANDS.md
backend/perl-legacy/: code-review.md  cz2
backend/src/pycz2/: __main__.py  api.py  cache.py  cli.py  config.py  healthcheck.py  hvac_service.py  mqtt.py  sse.py  worker.py
backend/src/pycz2/core/: client.py  constants.py  frame.py  models.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_hvac_service.py
backend/tests/api/: test_status_flat.py
backend/tests/core/: test_client.py  test_frame.py
docs/: AGENTS.md  FRONTEND_ERROR_REPORTING.md  HOLD_MODE_ANALYSIS.md  MQTT_TOPICS.md  cz2-product-data.md  cz2-protocol-registers.md
docs/complete/: TIMEOUT_BUG_INVESTIGATION.md  backend-code-review-part2.md  backend-code-review.md  frontend-error-reporting.md  hold-override-bug.md  mountainstat-migration-checklist.md  mountainstat-migration-plan.md
frontend/: .env.development  .env.production  CLAUDE.md  MIGRATION_SUMMARY.md  index.html  nginx.conf  package.json  vite.config.js
frontend/.serena/: project.yml
frontend/.serena/memories/: code_style_conventions.md  known_issues_improvements.md  project_overview.md
frontend/src/: App.jsx  System.jsx  apiNormalizer.js  apiService.js  config.js  index.css  thermostat.jsx  tooltipContent.js
frontend/src/__tests__/: System.test.jsx  apiNormalizer.test.js  apiService.test.js  setup.js
frontend/src/components/ui/: tooltip.css
src/: App.jsx  App.scss  Status.jsx  System.jsx  apiService.js  config.js  json_response.js  main.jsx  mqttService.jsx  thermostat.jsx  tooltipContent.js
src/__tests__/: System.test.jsx  apiService.test.js  config.test.js  setup.js
src/components/ui/: toaster.css  toaster.jsx  tooltip.jsx
src/pycz2/: __main__.py  api.py  cache.py  cli.py  config.py  hvac_service.py  mqtt.py
src/pycz2/core/: client.py  constants.py  frame.py  models.py
tests/: test_api.py  test_cli.py
tests/core/: test_client.py
