[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycz2"
version = "1.0.0"
description = "A Python application to control and monitor Carrier ComfortZone II HVAC systems."
authors = [{ name = "AI Assistant" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "construct>=2.10.70",
    "pyserial-asyncio>=0.6",
    "paho-mqtt>=2.1.0",
    "crc>=7.1.0",
    "aiomqtt>=2.0.0",
    "tenacity>=9.1.2",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
pycz2 = "pycz2.__main__:app"

[tool.uv.sources]
pycz2 = { path = "src" }


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = true

[tool.pylint]
disable = ["C0103", "C0114", "C0115", "C0116", "R0903"]
max-line-length = 88

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportOperatorIssue = false
reportUnknownVariableType = false

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.16.1",
    "pylint>=3.3.7",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.8",
    "pytest-timeout>=2.3.1",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
addopts = "-q"
timeout = 30
asyncio_mode = "auto"

