[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycz2"
version = "1.0.0"
description = "A Python application to control and monitor Carrier ComfortZone II HVAC systems."
authors = [{ name = "Devon Peet" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "construct>=2.10.70",
    "pyserial-asyncio>=0.6",
    "paho-mqtt>=2.1.0",
    "crc>=7.1.0",
    "aiomqtt>=2.5.1",
    "aiosqlite>=0.22.1",
    "sse-starlette>=3.3.2",
    "httpx>=0.28.1",
]

[project.scripts]
pycz2 = "pycz2.__main__:app"

[tool.uv.sources]
pycz2 = { path = "src" }


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportOperatorIssue = false
reportUnknownVariableType = false

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "sloppylint>=0.5.1",
]

[tool.pytest.ini_options]
addopts = "-q"
timeout = 30
asyncio_mode = "auto"

