[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycz2"
version = "1.0.0"
description = "A Python application to control and monitor Carrier ComfortZone II HVAC systems."
authors = [{ name = "Devon Peet" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "typer>=0.24.1",
    "rich>=15.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "construct>=2.10.70",
    "pyserial-asyncio>=0.6",
    "paho-mqtt>=2.1.0",
    "crc>=7.1.0",
    "aiomqtt>=2.5.1",
    "aiosqlite>=0.22.1",
    "sse-starlette>=3.3.4",
    "httpx>=0.28.1",
]

[project.scripts]
pycz2 = "pycz2.__main__:app"

[tool.uv.sources]
pycz2 = { path = "src" }


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
addopts = "-q"
timeout = 30
asyncio_mode = "auto"

